--- a/css/wakim-jraige.webflow.css
+++ b/css/wakim-jraige.webflow.css
@@ -86,9 +86,10 @@ p {
   height: 100%;
   padding-top: 16px;
   padding-bottom: 16px;
-  background-image: -webkit-linear-gradient(rgba(194, 190, 179, 0.59), rgba(49, 43, 61, 0.89)), url('../images/beach-1600px.jpg');
-  background-image: -o-linear-gradient(rgba(194, 190, 179, 0.59), rgba(49, 43, 61, 0.89)), url('../images/beach-1600px.jpg');
-  background-image: linear-gradient(rgba(194, 190, 179, 0.59), rgba(49, 43, 61, 0.89)), url('../images/beach-1600px.jpg');
+  background-image: -webkit-linear-gradient(rgba(75, 74, 72, 0.59), rgba(49, 43, 61, 0.89)), url('../images/beach-1600px.jpg');
+  background-image: -o-linear-gradient(rgba(75, 74, 72, 0.59), rgba(49, 43, 61, 0.89)), url('../images/beach-1600px.jpg');
+  background-image: linear-gradient(rgba(75, 74, 72, 0.59), rgba(49, 43, 61, 0.89)), url('../images/beach-1600px.jpg');
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(75, 74, 72, 0.59)), color-stop(100%, rgba(49, 43, 61, 0.89))), url('../images/beach-1600px.jpg');
   background-size: auto, cover;
 }
 .footer-section {
