--- a/css/app.css
+++ b/css/app.css
@@ -7,13 +7,20 @@
 }
 
 .interest {
-	font-size: 16px;
-	font-weight: bolder;
-    margin-top: 10px;
+	font-size: 12pt;
+	font-weight: 500;
+}
+
+.experiences, .interests, .projects {
+    margin-top: 16px;
+}
+
+.interest {
+    margin-top: 8px;
 }
 
 .sub {
-	font-weight: normal;
+	font-weight: 300;
 }
 
 .interval {
@@ -25,11 +32,20 @@
 }
 
 .social-link {
-    color: #fff;
+    color: #000;
 }
 
 .w-slider {
     height: 350px;
+    background: #fff;
+}
+
+.w-slider-dot.w-active {
+    background-color: #ddd;
+}
+
+.w-icon-slider-right, .w-icon-slider-left {
+    color: #000;
 }
 
 @media screen and (max-width: 991px) {
@@ -40,4 +56,14 @@
     .interest {
         text-align: center;
     }
+}
+
+.card-1 {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  background: #fff;
+}
+
+.card-1:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
