--- a/css/wakim-jraige.webflow.css
+++ b/css/wakim-jraige.webflow.css
@@ -1,18 +1,20 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
+
 body {
-  background-color: #232230;
-  font-family:'Open Sans', sans-serif;
-  color: white;
+  background-color: #ddd;
+  font-family: 'Roboto', sans-serif;
+  color: #000;
   font-size: 14px;
   line-height: 20px;
   text-shadow: rgba(0, 0, 0, 0.29) 0px 1px 0px;
 }
 h1 {
   margin: 10px 0px 16px;
-  font-family: Montserrat, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 39px;
   line-height: 44px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 500;
   letter-spacing: 1px;
   text-transform: uppercase;
   text-shadow: none;
@@ -21,38 +23,38 @@ h2 {
   margin: 10px 0px;
   font-size: 32px;
   line-height: 36px;
-  font-weight: 700;
+  font-weight: 500;
   text-shadow: none;
 }
 h3 {
   margin: 5px 0px;
-  font-size: 20px;
+  font-size: 16pt;
   line-height: 30px;
   font-weight: 400;
   text-shadow: none;
 }
 h4 {
   margin: 10px 0px;
-  font-size: 18px;
+  font-size: 14pt;
   line-height: 24px;
-  font-weight: 700;
+  font-weight: 500;
 }
 h5 {
   margin: 10px 0px;
-  font-size: 14px;
+  font-size: 11pt;
   line-height: 20px;
-  font-weight: 700;
+  font-weight: 500;
 }
 h6 {
   margin: 10px 0px;
   font-size: 12px;
   line-height: 18px;
-  font-weight: 700;
+  font-weight: 500;
 }
 p {
   margin-bottom: 5px;
-  font-family:'Open Sans', sans-serif;
-  font-size: 16px;
+  font-family:'Roboto', sans-serif;
+  font-size: 12pt;
   line-height: 23px;
   font-weight: 300;
   letter-spacing: 0px;
@@ -70,7 +72,7 @@ p {
   -webkit-transition: background-color 300ms ease;
   -o-transition: background-color 300ms ease;
   transition: background-color 300ms ease;
-  color: white;
+  color: #000;
   font-size: 16px;
   font-weight: 300;
   text-align: center;
@@ -80,30 +82,16 @@ p {
   background-color: #414073;
 }
 .social-widget-wrapper {
-  text-align: right;
+  text-align: center;
 }
 .header-main-section {
   height: 100%;
   padding-top: 16px;
   padding-bottom: 16px;
-  background-image: -webkit-linear-gradient(rgba(75, 74, 72, 0.59), rgba(49, 43, 61, 0.89)), url('../images/beach-1600px.jpg');
-  background-image: -o-linear-gradient(rgba(75, 74, 72, 0.59), rgba(49, 43, 61, 0.89)), url('../images/beach-1600px.jpg');
-  background-image: linear-gradient(rgba(75, 74, 72, 0.59), rgba(49, 43, 61, 0.89)), url('../images/beach-1600px.jpg');
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(75, 74, 72, 0.59)), color-stop(100%, rgba(49, 43, 61, 0.89))), url('../images/beach-1600px.jpg');
-  background-size: auto, cover;
-}
-.footer-section {
-  padding-top: 38px;
-  padding-bottom: 34px;
-  background-color: #232230;
-  color: #7e7c87;
-}
-.copyright {
-  text-align: right;
 }
 .title {
-  font-family:'Open Sans', sans-serif;
-  font-size: 38px;
+  font-family:'Roboto', sans-serif;
+  font-size: 29pt;
   font-weight: 400;
   text-shadow: none;
 }
@@ -124,24 +112,12 @@ p {
   width: 120px;
   height: 120px;
 }
-.separator {
-  display: block;
-  height: 1px;
+.main {
   margin-top: 16px;
-  margin-right: auto;
-  margin-left: auto;
-  border-bottom: 1px dotted rgba(255, 255, 255, 0.36);
-}
-.separator.separator-50 {
-  width: 50%;
-  margin-bottom: 16px;
-}
-.separator.separator-25 {
-  width: 25%;
 }
 .main-p {
   display: block;
-  margin-top: 16px;
+  margin-top: 8px;
   margin-right: auto;
   margin-left: auto;
   text-align: justify;
@@ -162,25 +138,22 @@ p {
   margin-right: auto;
   margin-left: auto;
 }
-.resume, .interests {
-  display: block;
+.main {
   width: 50%;
+  display: block;
   margin-right: auto;
   margin-left: auto;
 }
-.projects {
+.projects, .resume, .interests {
   display: block;
-  width: 50%;
+  width: 100%;
   margin-right: auto;
   margin-left: auto;
 }
 .project-header {
-  font-family:'Open Sans', sans-serif;
+  font-family:'Roboto', sans-serif;
   font-size: 15pt;
   font-weight: 400;
-  text-shadow: none;
-}
-.project-header.inner-slide {
   text-shadow: none;
 }
 .project-description {
@@ -194,10 +167,7 @@ p {
 .low-res {
   display: none;
 }
-.high-res {
-  text-shadow: none;
-}
-.inner-slide {
+.inner-slide, .high-res, .project-header.inner-slide {
   text-shadow: none;
 }
 .language-image {
@@ -213,8 +183,10 @@ p {
 }
 .github-button {
   display: inline-block;
-  margin-left: 16px;
   text-shadow: none;
+}
+.main {
+  padding: 16px;
 }
 @media (max-width: 991px) {
   h1 {
@@ -228,34 +200,13 @@ p {
   .button {
     width: 30%;
   }
-  .title {
-    text-shadow: none;
-  }
-  .main-p {
-    text-shadow: none;
-  }
-  .more {
-    text-shadow: none;
-  }
-  .resume, .interests {
+  .main {
     width: 75%;
   }
-  .projects {
-    width: 75%;
+  .resume, .interests, .projects {
+    width: 100%;
   }
-  .project-header {
-    text-shadow: none;
-  }
-  .project-header.inner-slide {
-    text-shadow: none;
-  }
-  .project-description {
-    text-shadow: none;
-  }
-  .high-res {
-    text-shadow: none;
-  }
-  .inner-slide {
+  .title, .main-p, .more, .inner-slide, .project-header, .project-header.inner-slide, .project-description, .high-res {
     text-shadow: none;
   }
 }
@@ -299,11 +250,8 @@ p {
     padding-right: 8px;
     padding-left: 8px;
   }
-  .resume, .interests {
-    width: 100%;
-  }
-  .projects {
-    width: 100%;
+  .projects, .main, .resume, .interests {
+    width: 95%;
   }
   .project-header {
     text-shadow: none;
@@ -363,13 +311,7 @@ p {
   }
 }
 @media (max-width: 479px) {
-  h1 {
-    text-shadow: none;
-  }
-  h3 {
-    text-shadow: none;
-  }
-  p {
+  h1, h3, p {
     text-shadow: none;
   }
   .button {
@@ -387,9 +329,6 @@ p {
   .copyright {
     text-align: center;
   }
-  .title {
-    text-shadow: none;
-  }
   .title-image {
     float: none;
   }
@@ -399,19 +338,7 @@ p {
     padding-left: 8px;
     text-shadow: none;
   }
-  .more {
-    text-shadow: none;
-  }
-  .project-header {
-    text-shadow: none;
-  }
-  .project-header.inner-slide {
-    text-shadow: none;
-  }
-  .project-description {
-    text-shadow: none;
-  }
-  .project-description.inner-slide-description {
+  .title, .more, .github-button, .project-description.inner-slide-description, .project-description, .project-header, .project-header.inner-slide {
     text-shadow: none;
   }
   .project-description.tablet {
@@ -421,9 +348,6 @@ p {
   .project-description.phone {
     display: block;
     margin-bottom: 8px;
-    text-shadow: none;
-  }
-  .github-button {
     text-shadow: none;
   }
 }
