--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
+
 .more {
     cursor: pointer;
 }
@@ -11,8 +13,9 @@
 	font-weight: 500;
 }
 
-.experiences, .interests, .projects {
+.experiences, .interests, .projects, .resume {
     margin-top: 16px;
+    padding: 16px;
 }
 
 .interest {
@@ -45,14 +48,37 @@
     float: right;
 }
 
-@media screen and (max-width: 991px) {
-    .interval {
-        text-align: left;
-    }
-    
-    .interest {
-        text-align: center;
-    }
+nav {
+  background-color: #3f51b5;
+  color: #000;
+  height: 64px;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  width: 100%;
+}
+
+nav ul {
+  list-style-type: none;
+  text-align: right;
+  padding-left: 0px;
+}
+
+nav ul li {
+  display: inline-block;
+  padding: 24px;
+}
+
+nav li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 12pt;
+  padding: 12px 0 12px 0;
+  font-family:'Roboto', sans-serif;
+}
+
+header {
+  margin-top: 64px;
 }
 
 .card-1 {
@@ -63,4 +89,428 @@
 
 .card-1:hover {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+body {
+  background-color: #ddd;
+  font-family: 'Roboto', sans-serif;
+  color: #000;
+  font-size: 14px;
+  line-height: 20px;
+  text-shadow: rgba(0, 0, 0, 0.29) 0px 1px 0px;
+}
+
+h1 {
+  margin: 10px 0px 16px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 39px;
+  line-height: 44px;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-shadow: none;
+}
+
+h2 {
+  margin: 10px 0px;
+  font-size: 32px;
+  line-height: 36px;
+  font-weight: 500;
+  text-shadow: none;
+}
+
+h3 {
+  margin: 5px 0px;
+  font-size: 16pt;
+  line-height: 30px;
+  font-weight: 400;
+  text-shadow: none;
+}
+
+h4 {
+  margin: 10px 0px;
+  font-size: 14pt;
+  line-height: 24px;
+  font-weight: 500;
+}
+
+h5 {
+  margin: 10px 0px;
+  font-size: 11pt;
+  line-height: 20px;
+  font-weight: 500;
+}
+
+h6 {
+  margin: 10px 0px;
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: 500;
+}
+
+p {
+  margin-bottom: 5px;
+  font-family:'Roboto', sans-serif;
+  font-size: 12pt;
+  line-height: 23px;
+  font-weight: 300;
+  letter-spacing: 0px;
+  text-shadow: none;
+}
+
+.button {
+  display: block;
+  width: 30%;
+  height: 54px;
+  padding: 4px 29px;
+  float: left;
+  border-top-right-radius: 2px;
+  border-bottom-right-radius: 2px;
+  background-color: #272545;
+  -webkit-transition: background-color 300ms ease;
+  -o-transition: background-color 300ms ease;
+  transition: background-color 300ms ease;
+  color: #000;
+  font-size: 16px;
+  font-weight: 300;
+  text-align: center;
+  text-decoration: none;
+}
+
+.button:hover {
+  background-color: #414073;
+}
+
+.social-widget-wrapper {
+  text-align: center;
+}
+
+.title {
+  font-family:'Roboto', sans-serif;
+  font-size: 29pt;
+  font-weight: 400;
+  text-shadow: none;
+}
+
+.title-container {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+}
+
+.title-image {
+  display: block;
+  margin-top: 10px;
+  margin-right: auto;
+  margin-left: auto;
+  border: 2px solid white;
+  border-radius: 50%;
+  box-shadow: black 3px 3px 12px -1px;
+  width: 120px;
+  height: 120px;
+}
+
+.main {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.main-p {
+  display: block;
+  margin-top: 8px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: justify;
+  text-shadow: none;
+}
+
+.more {
+  display: none;
+  width: 50px;
+  margin-right: auto;
+  margin-left: auto;
+  float: right;
+  text-decoration: underline;
+  text-shadow: none;
+}
+
+.holder {
+  display: block;
+  width: 50%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.main {
+  width: 50%;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.projects, .resume, .interests {
+  display: block;
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.project-header {
+  font-family:'Roboto', sans-serif;
+  font-size: 15pt;
+  font-weight: 400;
+  text-shadow: none;
+}
+
+.project-description {
+  margin-bottom: 16px;
+  text-align: justify;
+  text-shadow: none;
+}
+
+.project-description.inner-slide-description {
+  text-shadow: none;
+}
+
+.low-res {
+  display: none;
+}
+
+.inner-slide, .high-res, .project-header.inner-slide {
+  text-shadow: none;
+}
+
+.language-image {
+  display: inline-block;
+  margin-right: auto;
+  margin-left: 11px;
+  box-shadow: 1px 1px 3px 0px #353535;
+}
+
+.social-link {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+}
+
+.github-button {
+  display: inline-block;
+  text-shadow: none;
+}
+
+@media (max-width: 991px) {
+  h1 {
+    text-shadow: none;
+  }
+
+  h3 {
+    float: none;
+    text-align: center;
+    text-shadow: none;
+  }
+
+  .button {
+    width: 30%;
+  }
+
+  .main {
+    width: 75%;
+  }
+
+  .title, .main-p, .more, .inner-slide, .project-header, .project-header.inner-slide, .project-description, .high-res {
+    text-shadow: none;
+  }
+
+  .interval {
+      text-align: left;
+  }
+  
+  .interest {
+      text-align: center;
+  }
+}
+
+@media (max-width: 767px) {
+  nav {
+    height: 56px;
+  }
+
+  nav li a {
+    font-size: 10.5pt;
+    padding: 0px 0 0px 0;
+  }
+
+  nav ul li {
+    display: inline-block;
+    padding: 18px 4px 18px 4px;
+  }
+
+  h1 {
+    text-shadow: none;
+  }
+
+  h3 {
+    float: none;
+    text-align: center;
+    text-shadow: none;
+  }
+
+  p {
+    text-shadow: none;
+  }
+
+  .button {
+    width: 40%;
+  }
+
+  .social-widget-wrapper {
+    text-align: center;
+  }
+
+  .title {
+    text-shadow: none;
+  }
+
+  .main-p {
+    width: 100%;
+    padding-right: 8px;
+    padding-left: 8px;
+    text-shadow: none;
+  }
+
+  .more {
+    display: inline;
+    text-shadow: none;
+  }
+
+  .holder {
+    width: 100%;
+    padding-right: 8px;
+    padding-left: 8px;
+  }
+
+  .main {
+    width: 95%;
+  }
+
+  .project-header {
+    text-shadow: none;
+  }
+
+  .project-header.inner-slide {
+    display: block;
+    padding-right: 16px;
+    padding-left: 16px;
+    text-align: center;
+    text-shadow: none;
+  }
+
+  .project-description {
+    text-align: justify;
+    text-shadow: none;
+  }
+
+  .project-description.inner-slide-description {
+    padding-right: 8px;
+    padding-left: 8px;
+    text-shadow: none;
+  }
+
+  .project-description.tablet {
+    margin-bottom: 8px;
+    text-shadow: none;
+  }
+
+  .project-description.phone {
+    display: none;
+    text-shadow: none;
+  }
+
+  .project-description.hone {
+    text-shadow: none;
+  }
+
+  .low-res {
+    display: block;
+  }
+
+  .high-res {
+    display: none;
+    text-shadow: none;
+  }
+
+  .inner-slide {
+    display: inline-block;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    text-shadow: none;
+  }
+
+  .more-wrapper {
+    display: none;
+  }
+
+  .center {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+  }
+
+  .github-button {
+    text-shadow: none;
+  }
+}
+
+@media (max-width: 479px) {
+  h1, h3, p {
+    text-shadow: none;
+  }
+
+  .button {
+    width: 100%;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+  }
+
+  .social-widget-wrapper {
+    display: block;
+    width: 194px;
+    margin-right: auto;
+    margin-bottom: 15px;
+    margin-left: auto;
+  }
+
+  .copyright {
+    text-align: center;
+  }
+
+  .title-image {
+    float: none;
+  }
+
+  .main-p {
+    width: 100%;
+    padding-right: 8px;
+    padding-left: 8px;
+    text-shadow: none;
+  }
+
+  .title, .more, .github-button, .project-description.inner-slide-description, .project-description, .project-header, .project-header.inner-slide {
+    text-shadow: none;
+  }
+
+  .project-description.tablet {
+    display: none;
+    text-shadow: none;
+  }
+
+  .project-description.phone {
+    display: block;
+    margin-bottom: 8px;
+    text-shadow: none;
+  }
 }
