--- a/css/app.css
+++ b/css/app.css
@@ -71,6 +71,12 @@ nav li a {
   font-family:'Roboto', sans-serif;
 }
 
+.activity {
+  font-family:'Roboto', sans-serif;
+  font-size: 11pt;
+  font-weight: 300;
+}
+
 .card-1 {
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
